k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zetl
  namespace: zetl
  labels:
    app: zetl
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: zetl
